--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ api_version: 1
 threadsafe: true
 handlers:
 - url: /
-  static_files: insights_app/index.html
-  upload: insights_app/index.html
+  static_files: dist/index.html
+  upload: dist/index.html
 - url: /
-  static_dir: insights_app
+  static_dir: dist
